deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-app
spec:
  replicas: 2  # Number of instances you want
  selector:
    matchLabels:
      app: my-web-app
  template:
    metadata:
      labels:
        app: my-web-app
    spec:
      containers:
      - name: my-web-app
        image: 676206941544.dkr.ecr.us-east-1.amazonaws.com/my-web-app:latest
        ports:
        - containerPort: 80
